<resources>
    <string name="app_name">Crumbs</string>

    <string-array name="countryCode">
        <item>+91</item>
        <item>+1</item>
    </string-array>

    <string name="openDrawer"> Open Navigation Drawer </string>
    <string name="closeDrawer"> Closing Navigation Drawer </string>

    <string name="title_activity_lends_and_borrow">LendsAndBorrow</string>
    <string name="title_activity_lend_and_borrow">LendAndBorrow</string>
    <string name="title_activity_lend_and_borrow_personal">Lend And Borrow Individual</string>
    <string name="title_activity_add_entry">Add Personal Expense</string>
    <string name="title_activity_add_user">ActivityAddUser</string>
    <string name="title_activity_personal_expense">Personal Expense</string>
    <string name="title_activity_joint_expense">Joint Expense</string>
    <string name="title_activity_joint_expense_individual">Joint Expense Individual</string>
    <string name="title_activity_add_group_entry">Add Group Entry</string>
    <string name="title_activity_edit_category">Edit Category</string>
    <string name="title_activity_register_user">Register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_lend_and_borrow_add_entry">Add Lend and Borrow</string>

    <string name="category_name">Category Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="to_get">To get</string>
    <string name="to_give">To give</string>
    <string name="label_total_expenses">Total Expense</string>
    <string name="label_lend">Lend</string>
    <string name="label_borrow">Borrow</string>
    <string name="label_monthly_renew">Monthly Renewing</string>
    <string name="label_ongoing">On Going</string>

    <string name="action_done">DONE</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="country_code">Country Code</string>
    <string name="group_name">Enter Group Name</string>
    <string name="hint_type_member_name">Type Member Name</string>
    <string name="remove">REMOVE</string>
    <string name="title_remove_member">Remove Member</string>
    <string name="spent">Spent</string>
    <string name="total">Total</string>
    <string name="per_head">Per Head</string>
    <string name="balance">Balance</string>
    <string name="spent_by">Spent By:</string>
    <string name="group_empty_message">No Group.\nClick below icon to create new Group</string>
    <string name="empty_entry">No entries.\nClick below icon to create new</string>
</resources>
