<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        Total amount Spend


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_spent_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:singleLine="false"
                android:text="@string/spent"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_spent_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_give_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:singleLine="false"
                android:text="@string/to_give"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_give_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/to_get"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_get_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_groups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:listSelector="@android:color/transparent"
        android:paddingBottom="70dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="none" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="No Group.\nClick below icon to create new Group"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />
</LinearLayout>

<!--

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tricon.labs.pepper.ActivityJointExpense">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/linearLayout">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Total amount Spend"/>

            <TextView
                android:id="@+id/totalspend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Total amount to Give"/>

            <TextView
                android:id="@+id/amtToGive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Total amount to Get"/>

            <TextView
                android:id="@+id/amtToGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>


    </LinearLayout>




    <ListView
        android:id="@+id/listViewFromDB"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        >
    </ListView>







    <.!.-.-
    <ImageButton
        android:id="@+id/addEntry"
        android:layout_width="@dimen/floating_button_diameter"
        android:layout_height="@dimen/floating_button_diameter"
        android:background="@drawable/floating_button"
        android:src="@drawable/add_24"
        android:tint="@android:color/white"

        android:elevation="10dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/addUser"
        android:layout_toStartOf="@+id/addUser" />
    -.->

</RelativeLayout>
-->